Fix ticker position - move inside news-feed section
- Removed absolute positioning that caused ticker to overlap stats
- Moved ticker div inside home__news-feed section (after Galnet news)
- Ticker now appears below Galnet news in center column
- No more overlap with right sidebar statistics

--- a/css/components/trading.css
+++ b/css/components/trading.css
@@ -92,16 +92,6 @@
   margin-bottom: 1rem;
 }
 
-@media only screen and (min-width: 1024px) {
-  .home__ticker {
-    position: absolute;
-    top: 50%;
-    right: 0;
-    width: 25%;
-    margin-top: 0;
-  }
-}
-
 /* Form inputs styling */
 input[type='text'],
 input[type='search'],
